// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contentSurround > renders with as correctly 1`] = `
"<section data-slot="root" class="grid grid-cols-1 sm:grid-cols-2 gap-8"><a href="/getting-started" data-slot="link" class="group block px-6 py-8 rounded-lg border border-border hover:bg-background-elevated/50 outline-primary/25 focus-visible:outline-3 focus-visible:border-primary transition-colors">
    <div data-slot="linkLeading" class="inline-flex items-center rounded-full p-1.5 bg-background-elevated group-hover:bg-primary/10 ring ring-ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-left size-5 shrink-0 color-text-highlighted group-hover:text-primary transition-[color,translate] group-active:-translate-x-0.5" aria-hidden="true" data-slot="linkLeadingIcon"></span></div>
    <p data-slot="linkTitle" class="font-medium text-[15px] color-text-highlighted mb-1 truncate">Introduction</p>
    <p data-slot="linkDescription" class="text-sm color-text-muted line-clamp-2">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</p>
  </a><a href="/getting-started/theme" data-slot="link" class="group block px-6 py-8 rounded-lg border border-border hover:bg-background-elevated/50 outline-primary/25 focus-visible:outline-3 focus-visible:border-primary transition-colors text-end">
    <div data-slot="linkLeading" class="inline-flex items-center rounded-full p-1.5 bg-background-elevated group-hover:bg-primary/10 ring ring-ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-right size-5 shrink-0 color-text-highlighted group-hover:text-primary transition-[color,translate] group-active:translate-x-0.5" aria-hidden="true" data-slot="linkLeadingIcon"></span></div>
    <p data-slot="linkTitle" class="font-medium text-[15px] color-text-highlighted mb-1 truncate">Theme</p>
    <p data-slot="linkDescription" class="text-sm color-text-muted line-clamp-2">Learn how to customize Pohon UI components using UnoCSS, CSS variables and the UnoCss Variants API for powerful and flexible theming.</p>
  </a></section>"
`;

exports[`contentSurround > renders with class correctly 1`] = `
"<div data-slot="root" class="grid grid-cols-1 sm:grid-cols-2 gap-8 gap-12"><a href="/getting-started" data-slot="link" class="group block px-6 py-8 rounded-lg border border-border hover:bg-background-elevated/50 outline-primary/25 focus-visible:outline-3 focus-visible:border-primary transition-colors">
    <div data-slot="linkLeading" class="inline-flex items-center rounded-full p-1.5 bg-background-elevated group-hover:bg-primary/10 ring ring-ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-left size-5 shrink-0 color-text-highlighted group-hover:text-primary transition-[color,translate] group-active:-translate-x-0.5" aria-hidden="true" data-slot="linkLeadingIcon"></span></div>
    <p data-slot="linkTitle" class="font-medium text-[15px] color-text-highlighted mb-1 truncate">Introduction</p>
    <p data-slot="linkDescription" class="text-sm color-text-muted line-clamp-2">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</p>
  </a><a href="/getting-started/theme" data-slot="link" class="group block px-6 py-8 rounded-lg border border-border hover:bg-background-elevated/50 outline-primary/25 focus-visible:outline-3 focus-visible:border-primary transition-colors text-end">
    <div data-slot="linkLeading" class="inline-flex items-center rounded-full p-1.5 bg-background-elevated group-hover:bg-primary/10 ring ring-ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-right size-5 shrink-0 color-text-highlighted group-hover:text-primary transition-[color,translate] group-active:translate-x-0.5" aria-hidden="true" data-slot="linkLeadingIcon"></span></div>
    <p data-slot="linkTitle" class="font-medium text-[15px] color-text-highlighted mb-1 truncate">Theme</p>
    <p data-slot="linkDescription" class="text-sm color-text-muted line-clamp-2">Learn how to customize Pohon UI components using UnoCSS, CSS variables and the UnoCss Variants API for powerful and flexible theming.</p>
  </a></div>"
`;

exports[`contentSurround > renders with link slot correctly 1`] = `"<div data-slot="root" class="grid grid-cols-1 sm:grid-cols-2 gap-8"><a href="/getting-started" data-slot="link" class="group block px-6 py-8 rounded-lg border border-border hover:bg-background-elevated/50 outline-primary/25 focus-visible:outline-3 focus-visible:border-primary transition-colors">Link slot</a><a href="/getting-started/theme" data-slot="link" class="group block px-6 py-8 rounded-lg border border-border hover:bg-background-elevated/50 outline-primary/25 focus-visible:outline-3 focus-visible:border-primary transition-colors text-end">Link slot</a></div>"`;

exports[`contentSurround > renders with link-leading slot correctly 1`] = `
"<div data-slot="root" class="grid grid-cols-1 sm:grid-cols-2 gap-8"><a href="/getting-started" data-slot="link" class="group block px-6 py-8 rounded-lg border border-border hover:bg-background-elevated/50 outline-primary/25 focus-visible:outline-3 focus-visible:border-primary transition-colors">
    <div data-slot="linkLeading" class="inline-flex items-center rounded-full p-1.5 bg-background-elevated group-hover:bg-primary/10 ring ring-ring-accented mb-4 group-hover:ring-primary/50 transition">Link leading slot</div>
    <p data-slot="linkTitle" class="font-medium text-[15px] color-text-highlighted mb-1 truncate">Introduction</p>
    <p data-slot="linkDescription" class="text-sm color-text-muted line-clamp-2">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</p>
  </a><a href="/getting-started/theme" data-slot="link" class="group block px-6 py-8 rounded-lg border border-border hover:bg-background-elevated/50 outline-primary/25 focus-visible:outline-3 focus-visible:border-primary transition-colors text-end">
    <div data-slot="linkLeading" class="inline-flex items-center rounded-full p-1.5 bg-background-elevated group-hover:bg-primary/10 ring ring-ring-accented mb-4 group-hover:ring-primary/50 transition">Link leading slot</div>
    <p data-slot="linkTitle" class="font-medium text-[15px] color-text-highlighted mb-1 truncate">Theme</p>
    <p data-slot="linkDescription" class="text-sm color-text-muted line-clamp-2">Learn how to customize Pohon UI components using UnoCSS, CSS variables and the UnoCss Variants API for powerful and flexible theming.</p>
  </a></div>"
`;

exports[`contentSurround > renders with link-title slot correctly 1`] = `
"<div data-slot="root" class="grid grid-cols-1 sm:grid-cols-2 gap-8"><a href="/getting-started" data-slot="link" class="group block px-6 py-8 rounded-lg border border-border hover:bg-background-elevated/50 outline-primary/25 focus-visible:outline-3 focus-visible:border-primary transition-colors">
    <div data-slot="linkLeading" class="inline-flex items-center rounded-full p-1.5 bg-background-elevated group-hover:bg-primary/10 ring ring-ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-left size-5 shrink-0 color-text-highlighted group-hover:text-primary transition-[color,translate] group-active:-translate-x-0.5" aria-hidden="true" data-slot="linkLeadingIcon"></span></div>
    <p data-slot="linkTitle" class="font-medium text-[15px] color-text-highlighted mb-1 truncate">Link title slot</p>
    <p data-slot="linkDescription" class="text-sm color-text-muted line-clamp-2">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</p>
  </a><a href="/getting-started/theme" data-slot="link" class="group block px-6 py-8 rounded-lg border border-border hover:bg-background-elevated/50 outline-primary/25 focus-visible:outline-3 focus-visible:border-primary transition-colors text-end">
    <div data-slot="linkLeading" class="inline-flex items-center rounded-full p-1.5 bg-background-elevated group-hover:bg-primary/10 ring ring-ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-right size-5 shrink-0 color-text-highlighted group-hover:text-primary transition-[color,translate] group-active:translate-x-0.5" aria-hidden="true" data-slot="linkLeadingIcon"></span></div>
    <p data-slot="linkTitle" class="font-medium text-[15px] color-text-highlighted mb-1 truncate">Link title slot</p>
    <p data-slot="linkDescription" class="text-sm color-text-muted line-clamp-2">Learn how to customize Pohon UI components using UnoCSS, CSS variables and the UnoCss Variants API for powerful and flexible theming.</p>
  </a></div>"
`;

exports[`contentSurround > renders with nextIcon correctly 1`] = `
"<div data-slot="root" class="grid grid-cols-1 sm:grid-cols-2 gap-8"><a href="/getting-started" data-slot="link" class="group block px-6 py-8 rounded-lg border border-border hover:bg-background-elevated/50 outline-primary/25 focus-visible:outline-3 focus-visible:border-primary transition-colors">
    <div data-slot="linkLeading" class="inline-flex items-center rounded-full p-1.5 bg-background-elevated group-hover:bg-primary/10 ring ring-ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-left size-5 shrink-0 color-text-highlighted group-hover:text-primary transition-[color,translate] group-active:-translate-x-0.5" aria-hidden="true" data-slot="linkLeadingIcon"></span></div>
    <p data-slot="linkTitle" class="font-medium text-[15px] color-text-highlighted mb-1 truncate">Introduction</p>
    <p data-slot="linkDescription" class="text-sm color-text-muted line-clamp-2">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</p>
  </a><a href="/getting-started/theme" data-slot="link" class="group block px-6 py-8 rounded-lg border border-border hover:bg-background-elevated/50 outline-primary/25 focus-visible:outline-3 focus-visible:border-primary transition-colors text-end">
    <div data-slot="linkLeading" class="inline-flex items-center rounded-full p-1.5 bg-background-elevated group-hover:bg-primary/10 ring ring-ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:chevron-right size-5 shrink-0 color-text-highlighted group-hover:text-primary transition-[color,translate] group-active:translate-x-0.5" aria-hidden="true" data-slot="linkLeadingIcon"></span></div>
    <p data-slot="linkTitle" class="font-medium text-[15px] color-text-highlighted mb-1 truncate">Theme</p>
    <p data-slot="linkDescription" class="text-sm color-text-muted line-clamp-2">Learn how to customize Pohon UI components using UnoCSS, CSS variables and the UnoCss Variants API for powerful and flexible theming.</p>
  </a></div>"
`;

exports[`contentSurround > renders with prevIcon correctly 1`] = `
"<div data-slot="root" class="grid grid-cols-1 sm:grid-cols-2 gap-8"><a href="/getting-started" data-slot="link" class="group block px-6 py-8 rounded-lg border border-border hover:bg-background-elevated/50 outline-primary/25 focus-visible:outline-3 focus-visible:border-primary transition-colors">
    <div data-slot="linkLeading" class="inline-flex items-center rounded-full p-1.5 bg-background-elevated group-hover:bg-primary/10 ring ring-ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:chevron-left size-5 shrink-0 color-text-highlighted group-hover:text-primary transition-[color,translate] group-active:-translate-x-0.5" aria-hidden="true" data-slot="linkLeadingIcon"></span></div>
    <p data-slot="linkTitle" class="font-medium text-[15px] color-text-highlighted mb-1 truncate">Introduction</p>
    <p data-slot="linkDescription" class="text-sm color-text-muted line-clamp-2">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</p>
  </a><a href="/getting-started/theme" data-slot="link" class="group block px-6 py-8 rounded-lg border border-border hover:bg-background-elevated/50 outline-primary/25 focus-visible:outline-3 focus-visible:border-primary transition-colors text-end">
    <div data-slot="linkLeading" class="inline-flex items-center rounded-full p-1.5 bg-background-elevated group-hover:bg-primary/10 ring ring-ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-right size-5 shrink-0 color-text-highlighted group-hover:text-primary transition-[color,translate] group-active:translate-x-0.5" aria-hidden="true" data-slot="linkLeadingIcon"></span></div>
    <p data-slot="linkTitle" class="font-medium text-[15px] color-text-highlighted mb-1 truncate">Theme</p>
    <p data-slot="linkDescription" class="text-sm color-text-muted line-clamp-2">Learn how to customize Pohon UI components using UnoCSS, CSS variables and the UnoCss Variants API for powerful and flexible theming.</p>
  </a></div>"
`;

exports[`contentSurround > renders with surround correctly 1`] = `
"<div data-slot="root" class="grid grid-cols-1 sm:grid-cols-2 gap-8"><a href="/getting-started" data-slot="link" class="group block px-6 py-8 rounded-lg border border-border hover:bg-background-elevated/50 outline-primary/25 focus-visible:outline-3 focus-visible:border-primary transition-colors">
    <div data-slot="linkLeading" class="inline-flex items-center rounded-full p-1.5 bg-background-elevated group-hover:bg-primary/10 ring ring-ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-left size-5 shrink-0 color-text-highlighted group-hover:text-primary transition-[color,translate] group-active:-translate-x-0.5" aria-hidden="true" data-slot="linkLeadingIcon"></span></div>
    <p data-slot="linkTitle" class="font-medium text-[15px] color-text-highlighted mb-1 truncate">Introduction</p>
    <p data-slot="linkDescription" class="text-sm color-text-muted line-clamp-2">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</p>
  </a><a href="/getting-started/theme" data-slot="link" class="group block px-6 py-8 rounded-lg border border-border hover:bg-background-elevated/50 outline-primary/25 focus-visible:outline-3 focus-visible:border-primary transition-colors text-end">
    <div data-slot="linkLeading" class="inline-flex items-center rounded-full p-1.5 bg-background-elevated group-hover:bg-primary/10 ring ring-ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-right size-5 shrink-0 color-text-highlighted group-hover:text-primary transition-[color,translate] group-active:translate-x-0.5" aria-hidden="true" data-slot="linkLeadingIcon"></span></div>
    <p data-slot="linkTitle" class="font-medium text-[15px] color-text-highlighted mb-1 truncate">Theme</p>
    <p data-slot="linkDescription" class="text-sm color-text-muted line-clamp-2">Learn how to customize Pohon UI components using UnoCSS, CSS variables and the UnoCss Variants API for powerful and flexible theming.</p>
  </a></div>"
`;

exports[`contentSurround > renders with ui correctly 1`] = `
"<div data-slot="root" class="grid grid-cols-1 sm:grid-cols-2 gap-8"><a href="/getting-started" data-slot="link" class="group block px-6 py-8 rounded-lg border border-border hover:bg-background-elevated/50 outline-primary/25 focus-visible:outline-3 focus-visible:border-primary transition-colors">
    <div data-slot="linkLeading" class="inline-flex items-center rounded-full p-1.5 bg-background-elevated group-hover:bg-primary/10 ring ring-ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-left size-5 shrink-0 color-text-highlighted group-hover:text-primary transition-[color,translate] group-active:-translate-x-0.5" aria-hidden="true" data-slot="linkLeadingIcon"></span></div>
    <p data-slot="linkTitle" class="font-medium text-[15px] color-text-highlighted mb-1 truncate text-xl">Introduction</p>
    <p data-slot="linkDescription" class="text-sm color-text-muted line-clamp-2">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</p>
  </a><a href="/getting-started/theme" data-slot="link" class="group block px-6 py-8 rounded-lg border border-border hover:bg-background-elevated/50 outline-primary/25 focus-visible:outline-3 focus-visible:border-primary transition-colors text-end">
    <div data-slot="linkLeading" class="inline-flex items-center rounded-full p-1.5 bg-background-elevated group-hover:bg-primary/10 ring ring-ring-accented mb-4 group-hover:ring-primary/50 transition"><span class="iconify i-lucide:arrow-right size-5 shrink-0 color-text-highlighted group-hover:text-primary transition-[color,translate] group-active:translate-x-0.5" aria-hidden="true" data-slot="linkLeadingIcon"></span></div>
    <p data-slot="linkTitle" class="font-medium text-[15px] color-text-highlighted mb-1 truncate text-xl">Theme</p>
    <p data-slot="linkDescription" class="text-sm color-text-muted line-clamp-2">Learn how to customize Pohon UI components using UnoCSS, CSS variables and the UnoCss Variants API for powerful and flexible theming.</p>
  </a></div>"
`;
